--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color: #222831;
     --primary-color: #fff;
-    --secondary-color: #014ba0;
+    --secondary-color: #ffc0cb;
     --font: "Nunito Sans", sans-serif;
 }
 
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    background-color: #014ba0;
+    background-color: #ffc0cb;
     text-align: center;
 }
 
@@ -47,12 +47,6 @@ nav a:hover {
     transition: transform 0.1s;
 }
 
-.graficos-section h1 {
-    text-align: center; /* Centraliza o título */
-    font-size: 2rem; /* Você pode ajustar o tamanho conforme necessário */
-    color: white;
-}
-
 .graficos-container {
     margin: 5rem;
   }
@@ -73,7 +67,7 @@ nav a:hover {
     text-align: center;
     padding: 0; /* Remover o preenchimento */
     margin: 80px; /* Remover a margem */
-    border: 2px solid #014ba0; /* Borda ao redor do contêiner */
+    border: 2px solid #ffc0cb; /* Borda ao redor do contêiner */
     border-radius: 10px; /* Bordas arredondadas, se desejado */
 }
 
@@ -82,10 +76,11 @@ nav a:hover {
     justify-content: center; /* Centralizar os elementos horizontalmente */
     align-items: center; /* Centralizar verticalmente */
 }
+
 canvas {
-    max-width: 100%; /* Ocupar no máximo 100% da largura do contêiner */
-    height: auto; /* Altura automática para manter a proporção */
-    margin: 200px; /* Remover a margem */
+    width: 100%; /* Ocupar toda a largura do gráfico */
+    height: 400px; /* Altura fixa do gráfico */
+    margin: 0; /* Remover a margem */
     padding: 0; /* Remover o preenchimento */
 }
 
@@ -93,7 +88,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #014ba0;
+    background-color: #ffc0cb;
     color: white;
     width: 100%;
     height: 3rem;
