--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    background-color: #014ba0;
+    background-color: #ffc0cb;
     text-align: center;
 }
 
@@ -93,7 +93,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #014ba0;
+    background-color: #ffc0cb;
     color: white;
     width: 100%;
     height: 3rem;
