--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color: #222831;
     --primary-color: #fff;
-    --secondary-color: #014ba0;
+    --secondary-color: #ffc0cb;
     --font: "Nunito Sans", sans-serif;
 }
 
